# fastapi-auth

./: .env.example  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.db.yaml  docker-compose.yaml  nginx.conf  pyproject.toml
alembic/: env.py
alembic/versions/: 0f15947edc36_.py  acfdd98ff353_.py
src/: config.py  create_superuser.py  database.py  dependencies.py  main.py
src/auth/: __init__.py  backends.py  router.py
src/users/: __init__.py  models.py  router.py  validators.py
