[build-system]
requires = ["setuptools>=80.9", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fast-api-auth"
version = "0.2.2"
description = "FastAPI auth service."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116",
    "uvicorn>=0.35",
    "python-dotenv>=1.1",
    "alembic>=1.16",
    "asyncpg>=0.30",
]

[project.optional-dependencies]
dev = ["ruff", "pre-commit", "pipdeptree"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "ASYNC"]
exclude = ["venv", "__pycache__", "**/alembic/**"]

[tool.ruff.lint.pycodestyle]
max-line-length = 79
